<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">北斗语音报文系统</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="text_begin">请开始说话…</string>
    <string name="pref_key_iat_show">iat_show</string>
    <string name="app_id">58f45018</string>
    <string name="title">北斗语音报文系统</string>
    <string name="yybwfs">语音报文发送</string>
    <string name="tv_number">号码：</string>
    <string name="hint_number">请输入号码</string>
    <string name="tv_recognize_result">识别内容：</string>
    <string name="recognize_result_hint">请点击识别按键进行语音识别</string>
    <string name="btn_recognize">识别</string>
    <string name="btn_send">发送</string>
    <string name="tv_back_home">返回主界面</string>
    <string name="bdmkxx">北斗模块信息</string>
    <string name="dwxx">定位信息: </string>
    <string name="jd">经度：</string>
    <string name="d">度</string>
    <string name="jf">角分</string>
    <string name="jm">角秒</string>
    <string name="wd">纬度：</string>
    <string name="tv_gd">高度：</string>
    <string name="m">米</string>
    <string name="tv_local_time">定位时间: </string>
    <string name="shi">时</string>
    <string name="fen">分</string>
    <string name="miao">秒</string>
    <string name="yysfjl">语音收发记录</string>
    <string name="qcsfjl">清除收发记录</string>
    <string name="xtztxx">系统状态信息</string>
    <string name="device_id">本机ID</string>
    <string name="glzk">功率状况</string>
    <string name="xtzj">系统自检</string>
    <string name="bbxx">版本信息</string>
</resources>