<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/tv_title"
        style="@style/TextAppearance.AppCompat.Display1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:text="@string/yybwfs"
        android:textColor="@color/black"
        app:layout_constraintBottom_toTopOf="@id/tv_number"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_number"
        style="@style/TextAppearance.AppCompat.Large"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:text="@string/tv_number"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_title" />

    <EditText
        android:id="@+id/et_number"
        style="@style/TextAppearance.AppCompat.Large"
        android:layout_width="320dp"
        android:layout_height="50dp"
        android:layout_marginTop="30dp"
        android:background="@drawable/edit_text_bg"
        android:hint="@string/hint_number"
        android:inputType="number"
        android:paddingStart="15dp"
        android:paddingLeft="15dp"
        android:textCursorDrawable="@drawable/edit_text_cursor"
        android:textSelectHandle="@drawable/edit_text_select"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_number" />

    <TextView
        android:id="@+id/tv_recognize_result"
        style="@style/TextAppearance.AppCompat.Large"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/tv_recognize_result"
        app:layout_constraintStart_toStartOf="@id/tv_number"
        app:layout_constraintTop_toBottomOf="@+id/et_number" />

    <EditText
        android:id="@+id/et_recognize_result"
        style="@style/TextAppearance.AppCompat.Large"
        android:layout_width="320dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:background="@drawable/edit_text_bg"
        android:gravity="top"
        android:hint="@string/recognize_result_hint"
        android:minLines="3"
        android:paddingStart="15dp"
        android:paddingLeft="15dp"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:textCursorDrawable="@drawable/edit_text_cursor"
        android:textSelectHandle="@drawable/edit_text_select"
        app:layout_constraintStart_toStartOf="@id/et_number"
        app:layout_constraintTop_toBottomOf="@id/tv_recognize_result" />

    <TextView
        android:id="@+id/tv_recognize"
        style="@style/TextAppearance.AppCompat.Large"
        android:layout_width="100dp"
        android:layout_height="60dp"
        android:background="@drawable/bg_btn"
        android:gravity="center"
        android:text="@string/btn_recognize"
        android:textColor="@drawable/bg_btn_text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/tv_send"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/et_recognize_result"
        app:layout_constraintVertical_bias="0.3" />

    <TextView
        android:id="@+id/tv_send"
        style="@style/TextAppearance.AppCompat.Large"
        android:layout_width="100dp"
        android:layout_height="60dp"
        android:background="@drawable/bg_btn"
        android:gravity="center"
        android:text="@string/btn_send"
        android:textColor="@drawable/bg_btn_text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/tv_recognize"
        app:layout_constraintTop_toBottomOf="@id/et_recognize_result"
        app:layout_constraintVertical_bias="0.3" />

    <TextView
        android:id="@+id/tv_back"
        style="@style/TextAppearance.AppCompat.Large"
        android:layout_width="150dp"
        android:layout_height="60dp"
        android:layout_marginTop="30dp"
        android:background="@drawable/bg_btn"
        android:gravity="center"
        android:text="@string/tv_back_home"
        android:textColor="@drawable/bg_btn_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_recognize" />
</androidx.constraintlayout.widget.ConstraintLayout>
